--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,12 @@
     margin-top: -17%;
 }
 
+.backbtn{
+    position: relative;
+    margin-left: -40%;
+    margin-top: 10%;
+}
+
 .form-select {
     display: block;
     width: 100%;
