--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 
     </div>
     <div class="col-md-4">
-      <button type="submit" name="submitForm" (click)="uploadFile(this)" class="btn btn-primary">Submit</button>
+      <button type="submit" name="submitForm" (click)="selectImageSource()" class="btn btn-primary">Submit</button>
       <br />
       <br />
       <button class="btn btn-primary" (click)="addzone()">Add Zone</button>
